<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.crazy.gemi.MainActivity">


    <LinearLayout
        android:id="@+id/tabs"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <View
                android:id="@+id/near_top_line"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="2dp"/>
            <TextView
                android:id="@+id/near"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:drawableTop="@drawable/tab_near"
                android:text="@string/act_near" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <View
                android:id="@+id/cheaper_top_line"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="2dp"/>

            <TextView
                android:id="@+id/search_cheaper"
                android:drawableTop="@drawable/tab_cheap"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/act_cheaper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <View
                android:id="@+id/favor_top_line"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="2dp"/>
            <TextView
                android:id="@+id/favor"
                android:layout_weight="1"
                android:drawableTop="@drawable/tab_favor"
                android:text="@string/act_tehui"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <View
                android:id="@+id/pocket_top_line"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="2dp"/>
            <TextView
                android:id="@+id/pocket"
                android:drawableTop="@drawable/tab_pocket"
                android:text="@string/act_pocket"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <View
                android:id="@+id/more_top_line"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="2dp"/>
            <TextView
                android:id="@+id/more"
                android:drawableTop="@drawable/tab_more"
                android:text="@string/act_more"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>


    <View
        android:id="@+id/line_bottom"
        android:layout_above="@id/tabs"
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="1dp" />


    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_above="@id/line_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>
